--- a/motorlist.html
+++ b/motorlist.html
@@ -84,14 +84,14 @@ th, td {
 /* STICKY HEADERS */
 thead tr:nth-child(1) th {
   position: sticky;
-  top: 56px; /* below blue header */
+  top: 56px;
   background: #003f88;
   color: white;
   z-index: 20;
 }
 thead tr:nth-child(2) th {
   position: sticky;
-  top: 92px; /* below first header row */
+  top: 92px;
   background: #eaf1ff;
   z-index: 15;
 }
@@ -101,14 +101,12 @@ tr:hover {
   cursor: pointer;
 }
 
-/* FILTER */
 .filter-row input {
   width: 100%;
   padding: 4px;
   font-size: 12px;
 }
 
-/* SECTION SEPARATOR (Column A blank) */
 .section-row {
   background: #dbe9ff !important;
   font-weight: 600;
@@ -122,7 +120,6 @@ tr:hover {
 
 <body>
 
-<!-- ===== HEADER ===== -->
 <div class="header-bar">
   <button onclick="goHome()">🏠</button>
   <button onclick="goBack()">🔁</button>
@@ -170,7 +167,7 @@ async function loadMotors() {
   filterRow.innerHTML = "";
   tbody.innerHTML = "";
 
-  /* ===== HEADERS FROM ROW 1 ===== */
+  /* ===== HEADERS: DIRECTLY FROM ROW 1 (NO LOGIC) ===== */
   const headerCells = rows[0].c;
 
   COLS.forEach(i => {
@@ -183,16 +180,12 @@ async function loadMotors() {
     filterRow.appendChild(fh);
   });
 
-  /* ===== DATA ROWS (FROM ROW 2 ONWARDS) ===== */
+  /* ===== DATA PART (UNCHANGED – AS REQUESTED) ===== */
   rows.slice(0).forEach(r => {
     const c = r.c || [];
-
-    // Validation: Column B must not be blank
     if (!c[1]?.v) return;
 
     const tr = document.createElement("tr");
-
-    // Section separator if Column A blank
     if (!c[0]?.v) tr.classList.add("section-row");
 
     COLS.forEach(i => {
@@ -214,7 +207,6 @@ async function loadMotors() {
   setupFilters();
 }
 
-/* ===== FILTER ===== */
 function setupFilters() {
   document.querySelectorAll(".filter-row input")
     .forEach((input, idx) => {
@@ -230,7 +222,6 @@ function setupFilters() {
     });
 }
 
-/* ===== EXPORT ===== */
 function exportExcel() {
   let csv = [];
   document.querySelectorAll("#motorTable tr").forEach(row => {
@@ -244,7 +235,6 @@ function exportExcel() {
   a.click();
 }
 
-/* ===== NAV ===== */
 function goHome() {
   window.location.href = "https://08electricaldata.github.io/";
 }
