--- a/summary-advanced.html
+++ b/summary-advanced.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Summary (Date / Month / Range)</title>
+<title>Summary</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
 body {
@@ -23,6 +24,7 @@ body {
   gap: 10px;
   padding: 12px;
 }
+
 .header-bar button {
   background: white;
   color: #003f88;
@@ -32,40 +34,36 @@ body {
   font-size: 16px;
   cursor: pointer;
 }
+.header-bar button:hover { opacity: 0.9; }
+
 .header-title {
   flex: 1;
   text-align: center;
-  font-size: 20px;
+  font-size: 22px;
   font-weight: 700;
 }
 
-/* ===== PAGE ===== */
+/* ===== PAGE CONTENT ===== */
 .page {
   padding: 20px;
 }
-h2 {
-  text-align: center;
-  color: #003f88;
-  font-size: 32px;
-}
 
-/* ===== CARD ===== */
 .card {
   background: white;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  margin-bottom: 20px;
 }
 
-/* ===== CONTROLS ===== */
+/* ===== FILTER CONTROLS ===== */
 .controls {
   display: flex;
-  flex-wrap: wrap;
   gap: 10px;
   margin-bottom: 12px;
-  align-items: center;
+  flex-wrap: wrap;
 }
-.controls input, .controls select {
+.controls input {
   padding: 6px;
 }
 .controls button {
@@ -91,7 +89,25 @@ th {
   background: #003f88;
   color: white;
 }
-tr:hover {
+
+/* ===== COLUMN WIDTH FIXES ===== */
+#summaryTable th:nth-child(4),
+#summaryTable td:nth-child(4) {
+  width: 110px;
+  white-space: nowrap;
+  text-align: center;
+}
+
+#summaryTable th:nth-child(5),
+#summaryTable td:nth-child(5) {
+  width: 130px;
+  min-width: 130px;
+  white-space: nowrap;
+  text-align: center;
+}
+
+/* Hover */
+tbody tr:hover {
   background: #eef5ff;
   cursor: pointer;
 }
@@ -104,6 +120,7 @@ tr:hover {
 
 <body>
 
+<!-- ===== HEADER ===== -->
 <div class="header-bar">
   <button onclick="goHome()">🏠</button>
   <button onclick="goBack()">🔁</button>
@@ -111,23 +128,12 @@ tr:hover {
 </div>
 
 <div class="page">
-<h2>Date / Month / Range Summary</h2>
 
 <div class="card">
   <div class="controls">
-    <!-- DATE -->
-    <input type="date" id="singleDate">
-
-    <!-- MONTH -->
-    <input type="month" id="monthPick">
-
-    <!-- RANGE -->
     <input type="date" id="fromDate">
     <input type="date" id="toDate">
-
-    <button onclick="loadSummary()">Load</button>
-
-    <input id="search" placeholder="Search…">
+    <button onclick="loadSummary()">Apply</button>
     <button onclick="exportExcel()">Export Excel</button>
     <button onclick="window.print()">Export PDF</button>
   </div>
@@ -150,107 +156,102 @@ tr:hover {
     <tbody></tbody>
   </table>
 </div>
+
 </div>
 
 <script>
 const SHEET_URL =
- "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
- "?gid=751880096&tqx=out:json";
+  "https://docs.google.com/spreadsheets/d/1Ar9-a9u4b622-6i8b889qGqENI8rl8Q2U6PPOPBaLDc/gviz/tq" +
+  "?gid=751880096&tqx=out:json";
 
 /* ===== NAV ===== */
-function goHome(){ location.href="https://08electricaldata.github.io/"; }
-function goBack(){ history.back(); }
-
-/* ===== DATE HELPERS ===== */
-function toISO(v){
-  if(!v) return "";
-  if(typeof v==="string" && v.startsWith("Date(")){
-    const p=v.match(/\d+/g);
-    return new Date(p[0],p[1],p[2]).toISOString().slice(0,10);
-  }
-  if(/^\d{2}\/\d{2}\/\d{4}$/.test(v)){
-    const[d,m,y]=v.split("/");
-    return `${y}-${m}-${d}`;
-  }
-  if(/^\d{2}-\d{2}-\d{4}$/.test(v)){
-    const[d,m,y]=v.split("-");
-    return `${y}-${m}-${d}`;
-  }
-  return "";
+function goHome() {
+  window.location.href = "https://08electricaldata.github.io/";
 }
-function dispDate(v){
-  const i=toISO(v); if(!i) return "";
-  const[y,m,d]=i.split("-"); return `${d}-${m}-${y}`;
+function goBack() {
+  history.back();
+}
+
+/* ===== DATE PARSE ===== */
+function parseDate(v) {
+  if (!v) return null;
+
+  if (typeof v === "string" && v.startsWith("Date(")) {
+    const p = v.match(/\d+/g);
+    return new Date(p[0], p[1], p[2]);
+  }
+  if (/^\d{2}-\d{2}-\d{4}$/.test(v)) {
+    const [d,m,y] = v.split("-");
+    return new Date(y, m - 1, d);
+  }
+  if (/^\d{2}\/\d{2}\/\d{4}$/.test(v)) {
+    const [d,m,y] = v.split("/");
+    return new Date(y, m - 1, d);
+  }
+  return null;
+}
+
+function formatDate(d) {
+  return `${String(d.getDate()).padStart(2,"0")}-${String(d.getMonth()+1).padStart(2,"0")}-${d.getFullYear()}`;
 }
 
 /* ===== LOAD SUMMARY ===== */
-async function loadSummary(){
-  const d1=document.getElementById("singleDate").value;
-  const m1=document.getElementById("monthPick").value;
-  const f=document.getElementById("fromDate").value;
-  const t=document.getElementById("toDate").value;
+async function loadSummary() {
+  const from = document.getElementById("fromDate").valueAsDate;
+  const to = document.getElementById("toDate").valueAsDate;
 
-  const res=await fetch(SHEET_URL);
-  const txt=await res.text();
-  const j=JSON.parse(txt.substring(47,txt.length-2));
+  const res = await fetch(SHEET_URL);
+  const txt = await res.text();
+  const json = JSON.parse(txt.substring(47, txt.length - 2));
 
-  const tbody=document.querySelector("#summaryTable tbody");
-  tbody.innerHTML="";
+  const tbody = document.querySelector("#summaryTable tbody");
+  tbody.innerHTML = "";
 
-  j.table.rows.forEach(r=>{
-    const c=r.c||[];
-    const iso=toISO(c[4]?.v);
-    if(!iso) return;
+  json.table.rows.forEach(r => {
+    const c = r.c || [];
+    const d = parseDate(c[4]?.v);
+    if (!d) return;
 
-    let ok=false;
-    if(d1 && iso===d1) ok=true;
-    if(m1 && iso.startsWith(m1)) ok=true;
-    if(f && t && iso>=f && iso<=t) ok=true;
-    if(!ok) return;
+    if (from && d < from) return;
+    if (to && d > to) return;
 
-    const tr=document.createElement("tr");
-    tr.innerHTML=`
-      <td>${c[2]?.v||""}</td>
-      <td>${c[3]?.v||""}</td>
-      <td>${c[0]?.v||""}</td>
-      <td>${c[1]?.v||""}</td>
-      <td>${dispDate(c[4]?.v)}</td>
-      <td>${c[5]?.v||""}</td>
-      <td>${c[6]?.v||""}</td>
-      <td>${c[7]?.v||""}</td>
-      <td>${c[9]?.v||""}</td>
-      <td>${c[10]?.v?`<a href="${c[10].v}" target="_blank">Open</a>`:""}</td>
+    const tr = document.createElement("tr");
+
+    tr.innerHTML = `
+      <td>${c[2]?.v || ""}</td>
+      <td>${c[3]?.v || ""}</td>
+      <td>${c[0]?.v || ""}</td>
+      <td>${c[1]?.v || ""}</td>
+      <td>${formatDate(d)}</td>
+      <td>${c[5]?.v || ""}</td>
+      <td>${c[6]?.v || ""}</td>
+      <td>${c[7]?.v || ""}</td>
+      <td>${c[9]?.v || ""}</td>
+      <td>${c[10]?.v ? `<a href="${c[10].v}" target="_blank">Open</a>` : ""}</td>
     `;
 
-    /* CLICK → DRIVE INFO */
-    tr.onclick=()=>{
-      const id=`${c[2]?.v}-${c[3]?.v}`;
-      location.href=
-        "https://08electricaldata.github.io/drive-viewer/index.html?id="+
+    tr.onclick = () => {
+      const id = `${c[2]?.v}-${c[3]?.v}`;
+      window.location.href =
+        "https://08electricaldata.github.io/drive-viewer/index.html?id=" +
         encodeURIComponent(id);
     };
 
     tbody.appendChild(tr);
   });
-
-  document.getElementById("search").onkeyup=function(){
-    const q=this.value.toLowerCase();
-    document.querySelectorAll("#summaryTable tbody tr")
-      .forEach(tr=>{
-        tr.style.display=tr.innerText.toLowerCase().includes(q)?"":"none";
-      });
-  };
 }
 
 /* ===== EXPORT ===== */
-function exportExcel(){
-  let csv=[];
-  document.querySelectorAll("#summaryTable tr").forEach(r=>{
-    csv.push([...r.children].map(td=>`"${td.innerText.replace(/"/g,'""')}"`).join(","));
+function exportExcel() {
+  let csv = [];
+  document.querySelectorAll("#summaryTable tr").forEach(row => {
+    csv.push([...row.children].map(td =>
+      `"${td.innerText.replace(/"/g,'""')}"`
+    ).join(","));
   });
-  const a=document.createElement("a");
-  a.href=URL.createObjectURL(new Blob([csv.join("\n")]));
-  a.download="summary.csv";
+  const a = document.createElement("a");
+  a.href = URL.createObjectURL(new Blob([csv.join("\n")]));
+  a.download = "summary.csv";
   a.click();
 }
 </script>
