--- a/history.html
+++ b/history.html
@@ -47,10 +47,12 @@ body {
 
 /* ✅ CREDIT TEXT */
 .header-credit {
-  font-size: 12px;
-  opacity: 0.85;
+  font-size: 16px;   /* increased from 12px */
+  font-weight: 500;
+  opacity: 0.9;
   white-space: nowrap;
 }
+
 
 /* ===== PAGE CONTENT ===== */
 .page {
